# ComfyUI-Gemini-API-EXP

./: Gemini2_0_nodes.py  README.md  README_EN.md  __init__.py  pyproject.toml  requirements.txt
workflow/: Gemini-API-example.json
